; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_set_value.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_set_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__*, i32 }
%struct.TYPE_9__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_11__ = type { i32* }

@IS_CV = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*, %struct.TYPE_11__*, i32, i32*)* @set_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_value(%struct.TYPE_10__* %0, %struct.TYPE_11__* %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %5, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %11 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = load i32, i32* %7, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  store i32* %15, i32** %9, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = call i64 @IS_BOT(i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %23, label %19

19:                                               ; preds = %4
  %20 = load i32*, i32** %8, align 8
  %21 = call i64 @IS_TOP(i32* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19, %4
  br label %73

24:                                               ; preds = %19
  %25 = load i32*, i32** %9, align 8
  %26 = call i64 @IS_TOP(i32* %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %32, label %28

28:                                               ; preds = %24
  %29 = load i32*, i32** %8, align 8
  %30 = call i64 @IS_BOT(i32* %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %41

32:                                               ; preds = %28, %24
  %33 = load i32*, i32** %9, align 8
  %34 = call i32 @zval_ptr_dtor_nogc(i32* %33)
  %35 = load i32*, i32** %9, align 8
  %36 = load i32*, i32** %8, align 8
  %37 = call i32 @ZVAL_COPY(i32* %35, i32* %36)
  %38 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %39 = load i32, i32* %7, align 4
  %40 = call i32 @scdf_add_to_worklist(%struct.TYPE_10__* %38, i32 %39)
  br label %73

41:                                               ; preds = %28
  %42 = load i32*, i32** %8, align 8
  %43 = call i64 @IS_PARTIAL_ARRAY(i32* %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %49, label %45

45:                                               ; preds = %41
  %46 = load i32*, i32** %8, align 8
  %47 = call i64 @IS_PARTIAL_OBJECT(i32* %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %73

49:                                               ; preds = %45, %41
  %50 = load i32*, i32** %9, align 8
  %51 = call i64 @Z_TYPE_P(i32* %50)
  %52 = load i32*, i32** %8, align 8
  %53 = call i64 @Z_TYPE_P(i32* %52)
  %54 = icmp ne i64 %51, %53
  br i1 %54, label %63, label %55

55:                                               ; preds = %49
  %56 = load i32*, i32** %8, align 8
  %57 = call i32 @Z_ARR_P(i32* %56)
  %58 = call i64 @zend_hash_num_elements(i32 %57)
  %59 = load i32*, i32** %9, align 8
  %60 = call i32 @Z_ARR_P(i32* %59)
  %61 = call i64 @zend_hash_num_elements(i32 %60)
  %62 = icmp ne i64 %58, %61
  br i1 %62, label %63, label %72

63:                                               ; preds = %55, %49
  %64 = load i32*, i32** %9, align 8
  %65 = call i32 @zval_ptr_dtor_nogc(i32* %64)
  %66 = load i32*, i32** %9, align 8
  %67 = load i32*, i32** %8, align 8
  %68 = call i32 @ZVAL_COPY(i32* %66, i32* %67)
  %69 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %70 = load i32, i32* %7, align 4
  %71 = call i32 @scdf_add_to_worklist(%struct.TYPE_10__* %69, i32 %70)
  br label %72

72:                                               ; preds = %63, %55
  br label %73

73:                                               ; preds = %23, %32, %72, %45
  ret void
}

declare dso_local i64 @IS_BOT(i32*) #1

declare dso_local i64 @IS_TOP(i32*) #1

declare dso_local i32 @zval_ptr_dtor_nogc(i32*) #1

declare dso_local i32 @ZVAL_COPY(i32*, i32*) #1

declare dso_local i32 @scdf_add_to_worklist(%struct.TYPE_10__*, i32) #1

declare dso_local i64 @IS_PARTIAL_ARRAY(i32*) #1

declare dso_local i64 @IS_PARTIAL_OBJECT(i32*) #1

declare dso_local i64 @Z_TYPE_P(i32*) #1

declare dso_local i64 @zend_hash_num_elements(i32) #1

declare dso_local i32 @Z_ARR_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
